syntax = "proto3";
package inf;

//请求
message UserRq {
    int32 id = 1;
}

//响应
message UserProfile {
    string name = 1;
    string email = 2;
}

//服务
service Data {
    rpc GetUser(UserRq) returns (UserProfile);
}